--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "hexlet_django_blog"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^4.2.1"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
